// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders default props 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with pathColor gray50 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #fafafb; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with pathColor gray100 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #f6f5f7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with pathColor gray200 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #eeeeff; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with pathColor gray300 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #dce1eb; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with pathColor white 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #fff; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with percentage 75 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 65.97344572538566px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with strokeWidth 25 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-37.5
      a 37.5,37.5 0 1 1 0,75
      a 37.5,37.5 0 1 1 0,-75
    "
        fill-opacity="0"
        stroke-width="25"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 235.61944901923448px 235.61944901923448px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-37.5
      a 37.5,37.5 0 1 1 0,75
      a 37.5,37.5 0 1 1 0,-75
    "
        fill-opacity="0"
        stroke-width="25"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 235.61944901923448px 235.61944901923448px; stroke-dashoffset: 235.61944901923448px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with text 100% 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #d4dae7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
      <text
        class="CircularProgressbar-text"
        style="dominant-baseline: middle; fill: #4f0599; font-size: 26px; text-anchor: middle;"
        x="50"
        y="50"
      >
        100%
      </text>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with trailColor gray50 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #fafafb; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with trailColor gray100 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #f6f5f7; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with trailColor gray200 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #eeeeff; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with trailColor gray300 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #dce1eb; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Progress renders with trailColor white 1`] = `
<DocumentFragment>
  <div
    style="height: 40px; width: 40px;"
  >
    <svg
      class="CircularProgressbar "
      data-test-id="CircularProgressbar"
      viewBox="0 0 100 100"
    >
      <path
        class="CircularProgressbar-trail"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #fff; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 0px;"
      />
      <path
        class="CircularProgressbar-path"
        d="
      M 50,50
      m 0,-42
      a 42,42 0 1 1 0,84
      a 42,42 0 1 1 0,-84
    "
        fill-opacity="0"
        stroke-width="16"
        style="stroke: #4f0599; stroke-linecap: round; stroke-dasharray: 263.89378290154264px 263.89378290154264px; stroke-dashoffset: 263.89378290154264px;"
      />
    </svg>
  </div>
</DocumentFragment>
`;
